--- a/_modules/pygef/bore.html
+++ b/_modules/pygef/bore.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pygef.bore &mdash; pygef 0.6.0 documentation</title>
+  <title>pygef.bore &mdash; pygef 0.6.1 documentation</title>
       <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../../_static/plot_directive.css" type="text/css" />
@@ -130,6 +130,8 @@
 
         <span class="n">parsed</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">_BroXmlBore</span><span class="p">,</span> <span class="n">_GefBore</span><span class="p">]</span>
 
+        <span class="bp">self</span><span class="o">.</span><span class="n">nen_version</span> <span class="o">=</span> <span class="kc">None</span>
+
         <span class="k">if</span> <span class="n">content</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">assert</span> <span class="p">(</span>
                 <span class="n">content</span><span class="p">[</span><span class="s2">&quot;file_type&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;gef&quot;</span> <span class="ow">or</span> <span class="n">content</span><span class="p">[</span><span class="s2">&quot;file_type&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;xml&quot;</span>
@@ -166,7 +168,14 @@
 <span class="sd">        -------</span>
 <span class="sd">        matplotlib.pyplot.figure</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="n">plot</span><span class="o">.</span><span class="n">plot_bore</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">df</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="n">figsize</span><span class="p">,</span> <span class="n">show</span><span class="o">=</span><span class="n">show</span><span class="p">,</span> <span class="n">dpi</span><span class="o">=</span><span class="n">dpi</span><span class="p">)</span></div></div>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">nen_version</span> <span class="o">==</span> <span class="s2">&quot;NEN 5104&quot;</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">plot</span><span class="o">.</span><span class="n">plot_bore</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">df</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="n">figsize</span><span class="p">,</span> <span class="n">show</span><span class="o">=</span><span class="n">show</span><span class="p">,</span> <span class="n">dpi</span><span class="o">=</span><span class="n">dpi</span><span class="p">)</span>
+        <span class="k">elif</span> <span class="bp">self</span><span class="o">.</span><span class="n">nen_version</span> <span class="o">==</span> <span class="s2">&quot;NEN-EN-ISO 14688&quot;</span><span class="p">:</span>
+            <span class="k">return</span> <span class="n">plot</span><span class="o">.</span><span class="n">plot_bore</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">df</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="n">figsize</span><span class="p">,</span> <span class="n">show</span><span class="o">=</span><span class="n">show</span><span class="p">,</span> <span class="n">dpi</span><span class="o">=</span><span class="n">dpi</span><span class="p">)</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
+                <span class="s2">&quot;Supported NEN version are only: &#39;NEN 5104&#39; and &#39;NEN-EN-ISO 14688&#39;&quot;</span>
+            <span class="p">)</span></div></div>
 </pre></div>
 
            </div>
