deploy: ede016cce39673bf780c9987a0c2759ab6ac249a

--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pygef.cpt &mdash; pygef 0.6.3 documentation</title>
+  <title>pygef.cpt &mdash; pygef 0.7.0 documentation</title>
       <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../../_static/plot_directive.css" type="text/css" />
@@ -75,7 +75,6 @@
 <span class="kn">from</span> <span class="nn">pygef.base</span> <span class="kn">import</span> <span class="n">Base</span>
 <span class="kn">from</span> <span class="nn">pygef.broxml</span> <span class="kn">import</span> <span class="n">_BroXmlCpt</span>
 <span class="kn">from</span> <span class="nn">pygef.gef</span> <span class="kn">import</span> <span class="n">_GefCpt</span>
-<span class="kn">from</span> <span class="nn">pygef.grouping</span> <span class="kn">import</span> <span class="n">GroupClassification</span>
 
 <span class="n">logger</span> <span class="o">=</span> <span class="n">logging</span><span class="o">.</span><span class="n">getLogger</span><span class="p">(</span><span class="vm">__name__</span><span class="p">)</span>
 
@@ -240,8 +239,6 @@
         <span class="n">water_level_wrt_depth</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
         <span class="n">p_a</span><span class="o">=</span><span class="mf">0.1</span><span class="p">,</span>
         <span class="n">new</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-        <span class="n">do_grouping</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-        <span class="n">min_thickness</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Classify each row of the cpt type.</span>
@@ -258,18 +255,11 @@
 <span class="sd">            Atmospheric pressure. Default: 0.1 MPa.</span>
 <span class="sd">        new: bool, default:True</span>
 <span class="sd">            If True and the classification is robertson, the new(2016) implementation of robertson is used.</span>
-<span class="sd">        do_grouping: bool,  optional for the classification</span>
-<span class="sd">            If True a group classification is added to the plot.</span>
-<span class="sd">        min_thickness: float, optional for the classification [m]</span>
-<span class="sd">            If specified together with the do_grouping set to True, a group classification is added to the plot.</span>
-<span class="sd">            The grouping is a simple algorithm that merge all the layers &lt; min_thickness with the last above one &gt; min_thickness.</span>
-<span class="sd">            In order to not make a big error do not use a value bigger then 0.2 m</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
 <span class="sd">        df: polars.DataFrame</span>
-<span class="sd">            If do_grouping is True a polars.DataFrame with the grouped layer is returned otherwise a polars.DataFrame</span>
-<span class="sd">            with a classification for each row is returned.</span>
+<span class="sd">            A polars.DataFrame with a classification for each row is returned.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># todo: refactor arguments, the arguments connected to each other</span>
@@ -282,12 +272,6 @@
                 <span class="sa">f</span><span class="s2">&quot;You did not input the water level, a default value of -1 m respect to the ground is used.&quot;</span>
                 <span class="sa">f</span><span class="s2">&quot; Change it using the kwagr water_level_NAP or water_level_wrt_depth.&quot;</span>
             <span class="p">)</span>
-        <span class="k">if</span> <span class="n">min_thickness</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="n">min_thickness</span> <span class="o">=</span> <span class="mf">0.2</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span>
-                <span class="sa">f</span><span class="s2">&quot;You did not input the accepted minimum thickness, a default value of 0.2 m is used.&quot;</span>
-                <span class="sa">f</span><span class="s2">&quot; Change it using th kwarg min_thickness&quot;</span>
-            <span class="p">)</span>
 
         <span class="k">if</span> <span class="n">classification</span> <span class="o">==</span> <span class="s2">&quot;robertson&quot;</span><span class="p">:</span>
             <span class="n">df</span> <span class="o">=</span> <span class="n">robertson</span><span class="o">.</span><span class="n">classify</span><span class="p">(</span>
@@ -299,8 +283,6 @@
                 <span class="n">pre_excavated_depth</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">pre_excavated_depth</span><span class="p">,</span>
                 <span class="n">p_a</span><span class="o">=</span><span class="n">p_a</span><span class="p">,</span>
             <span class="p">)</span>
-            <span class="k">if</span> <span class="n">do_grouping</span><span class="p">:</span>
-                <span class="k">return</span> <span class="n">GroupClassification</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">zid</span><span class="p">,</span> <span class="n">df</span><span class="p">,</span> <span class="n">min_thickness</span><span class="p">)</span><span class="o">.</span><span class="n">df_group</span>
             <span class="k">return</span> <span class="n">df</span>
 
         <span class="k">elif</span> <span class="n">classification</span> <span class="o">==</span> <span class="s2">&quot;been_jefferies&quot;</span><span class="p">:</span>
@@ -311,8 +293,6 @@
                 <span class="n">area_quotient_cone_tip</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">net_surface_area_quotient_of_the_cone_tip</span><span class="p">,</span>
                 <span class="n">pre_excavated_depth</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">pre_excavated_depth</span><span class="p">,</span>
             <span class="p">)</span>
-            <span class="k">if</span> <span class="n">do_grouping</span><span class="p">:</span>
-                <span class="k">return</span> <span class="n">GroupClassification</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">zid</span><span class="p">,</span> <span class="n">df</span><span class="p">,</span> <span class="n">min_thickness</span><span class="p">)</span><span class="o">.</span><span class="n">df_group</span>
             <span class="k">return</span> <span class="n">df</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
@@ -330,7 +310,6 @@
         <span class="n">show</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
         <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">11</span><span class="p">,</span> <span class="mi">8</span><span class="p">),</span>
         <span class="n">df_group</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-        <span class="n">do_grouping</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
         <span class="n">grid_step_x</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
         <span class="n">dpi</span><span class="o">=</span><span class="mi">100</span><span class="p">,</span>
         <span class="n">colors</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
@@ -371,8 +350,6 @@
 <span class="sd">                    Z value of the middle of the layer</span>
 <span class="sd">                - thickness</span>
 <span class="sd">                    Thickness of the layer</span>
-<span class="sd">        do_grouping: bool, only for cpt type, optional for the classification</span>
-<span class="sd">            If True a group classification is added to the plot.</span>
 <span class="sd">        grid_step_x: float, only for cpt type, default: None</span>
 <span class="sd">            Grid step for qc and Fr subplots.</span>
 <span class="sd">        dpi: int</span>
@@ -397,17 +374,6 @@
                 <span class="n">p_a</span><span class="o">=</span><span class="n">p_a</span><span class="p">,</span>
                 <span class="n">new</span><span class="o">=</span><span class="n">new</span><span class="p">,</span>
             <span class="p">)</span>
-
-            <span class="k">if</span> <span class="n">df_group</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">and</span> <span class="n">do_grouping</span> <span class="ow">is</span> <span class="kc">True</span><span class="p">:</span>
-                <span class="n">df_group</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">classify</span><span class="p">(</span>
-                    <span class="n">classification</span><span class="o">=</span><span class="n">classification</span><span class="p">,</span>
-                    <span class="n">water_level_NAP</span><span class="o">=</span><span class="n">water_level_NAP</span><span class="p">,</span>
-                    <span class="n">water_level_wrt_depth</span><span class="o">=</span><span class="n">water_level_wrt_depth</span><span class="p">,</span>
-                    <span class="n">p_a</span><span class="o">=</span><span class="n">p_a</span><span class="p">,</span>
-                    <span class="n">new</span><span class="o">=</span><span class="n">new</span><span class="p">,</span>
-                    <span class="n">do_grouping</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-                    <span class="n">min_thickness</span><span class="o">=</span><span class="n">min_thickness</span><span class="p">,</span>
-                <span class="p">)</span>
 
         <span class="k">return</span> <span class="n">plot</span><span class="o">.</span><span class="n">plot_cpt</span><span class="p">(</span>
             <span class="n">df</span><span class="p">,</span>
