--- a/tree/reference.html
+++ b/tree/reference.html
@@ -267,11 +267,8 @@ if it is different then also the argument colors should be passed.</p>
 <li><p><strong>z_NAP</strong> (<em>bool</em>) – If True the Z-axis is with respect to NAP.</p></li>
 </ul>
 </dd>
-<dt class="field-even">Returns</dt>
-<dd class="field-even"><p></p>
-</dd>
-<dt class="field-odd">Return type</dt>
-<dd class="field-odd"><p>matplotlib.pyplot.figure</p>
+<dt class="field-even">Return type</dt>
+<dd class="field-even"><p>matplotlib.pyplot.figure</p>
 </dd>
 </dl>
 </dd></dl>
@@ -359,11 +356,8 @@ if it is different then also the argument colors should be passed.</p>
 <li><p><strong>dpi</strong> (<em>int</em>) – Dpi figure</p></li>
 </ul>
 </dd>
-<dt class="field-even">Returns</dt>
-<dd class="field-even"><p></p>
-</dd>
-<dt class="field-odd">Return type</dt>
-<dd class="field-odd"><p>matplotlib.pyplot.figure</p>
+<dt class="field-even">Return type</dt>
+<dd class="field-even"><p>matplotlib.pyplot.figure</p>
 </dd>
 </dl>
 </dd></dl>
