deploy: f88de7b21b5ce390d3c99cf3d8c6e393a98ade94

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -67,8 +67,8 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="pygef/bore.html">pygef.bore</a></li>
-<li><a href="pygef/cpt.html">pygef.cpt</a></li>
+<ul><li><a href="pygef/gef/bore.html">pygef.gef.bore</a></li>
+<li><a href="pygef/gef/cpt.html">pygef.gef.cpt</a></li>
 </ul>
 
            </div>
