deploy: ca16627475a4f4d78cfa35b8577f694ba864ec28

--- a/_modules/pygef/gef/bore.html
+++ b/_modules/pygef/gef/bore.html
@@ -73,7 +73,6 @@
 
 <span class="kn">import</span> <span class="nn">pygef.gef.plot_utils</span> <span class="k">as</span> <span class="nn">plot</span>
 <span class="kn">from</span> <span class="nn">pygef.gef.base</span> <span class="kn">import</span> <span class="n">Base</span>
-<span class="kn">from</span> <span class="nn">pygef.broxml</span> <span class="kn">import</span> <span class="n">_BroXmlBore</span>
 <span class="kn">from</span> <span class="nn">pygef.gef.gef</span> <span class="kn">import</span> <span class="n">_GefBore</span>
 
 
@@ -130,8 +129,6 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span>
 
-        <span class="n">parsed</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">_BroXmlBore</span><span class="p">,</span> <span class="n">_GefBore</span><span class="p">]</span>
-
         <span class="bp">self</span><span class="o">.</span><span class="n">nen_version</span> <span class="o">=</span> <span class="kc">None</span>
 
         <span class="k">if</span> <span class="n">content</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
@@ -142,13 +139,13 @@
             <span class="k">if</span> <span class="n">content</span><span class="p">[</span><span class="s2">&quot;file_type&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;gef&quot;</span><span class="p">:</span>
                 <span class="n">parsed</span> <span class="o">=</span> <span class="n">_GefBore</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">content</span><span class="p">[</span><span class="s2">&quot;string&quot;</span><span class="p">])</span>
             <span class="k">elif</span> <span class="n">content</span><span class="p">[</span><span class="s2">&quot;file_type&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="s2">&quot;xml&quot;</span><span class="p">:</span>
-                <span class="n">parsed</span> <span class="o">=</span> <span class="n">_BroXmlBore</span><span class="p">(</span><span class="n">string</span><span class="o">=</span><span class="n">content</span><span class="p">[</span><span class="s2">&quot;string&quot;</span><span class="p">])</span>
+                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;xml not supported by this parser&quot;</span><span class="p">)</span>
 
         <span class="k">elif</span> <span class="n">path</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">path</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span><span class="o">.</span><span class="n">endswith</span><span class="p">(</span><span class="s2">&quot;gef&quot;</span><span class="p">):</span>
                 <span class="n">parsed</span> <span class="o">=</span> <span class="n">_GefBore</span><span class="p">(</span><span class="n">path</span><span class="p">)</span>
             <span class="k">elif</span> <span class="n">path</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span><span class="o">.</span><span class="n">endswith</span><span class="p">(</span><span class="s2">&quot;xml&quot;</span><span class="p">):</span>
-                <span class="n">parsed</span> <span class="o">=</span> <span class="n">_BroXmlBore</span><span class="p">(</span><span class="n">path</span><span class="p">)</span>
+                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;xml not supported by this parser&quot;</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;One of [path, (string, file_type)] should be not None.&quot;</span><span class="p">)</span>
 
