deploy: 1f81341f7d724f2c2bf565251ccc76c7d2e8611c

--- a/_modules/pygef/gef/bore.html
+++ b/_modules/pygef/gef/bore.html
@@ -77,7 +77,7 @@
 
 
 <div class="viewcode-block" id="Bore"><a class="viewcode-back" href="../../../tree/reference.html#pygef.Bore">[docs]</a><span class="k">class</span> <span class="nc">Bore</span><span class="p">(</span><span class="n">Base</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    ** Bore attributes:**</span>
 <span class="sd">        type: str</span>
 <span class="sd">            Type of the gef file</span>
@@ -113,7 +113,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="Bore.__init__"><a class="viewcode-back" href="../../../tree/reference.html#pygef.Bore.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">path</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">content</span><span class="p">:</span> <span class="nb">dict</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Bore class.</span>
 
 <span class="sd">        Parameters</span>
@@ -152,7 +152,7 @@
         <span class="bp">self</span><span class="o">.</span><span class="vm">__dict__</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">parsed</span><span class="o">.</span><span class="vm">__dict__</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="Bore.plot"><a class="viewcode-back" href="../../../tree/reference.html#pygef.Bore.plot">[docs]</a>    <span class="k">def</span> <span class="nf">plot</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">11</span><span class="p">,</span> <span class="mi">8</span><span class="p">),</span> <span class="n">show</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">dpi</span><span class="o">=</span><span class="mi">100</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Plot plot of soil components over the depth.</span>
 
 <span class="sd">        Parameters</span>
