--- a/_modules/pygef/gef/cpt.html
+++ b/_modules/pygef/gef/cpt.html
@@ -81,7 +81,7 @@
 
 
 <div class="viewcode-block" id="Cpt"><a class="viewcode-back" href="../../../tree/reference.html#pygef.Cpt">[docs]</a><span class="k">class</span> <span class="nc">Cpt</span><span class="p">(</span><span class="n">Base</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    ** Cpt attributes:**</span>
 <span class="sd">        *Always present:*</span>
 <span class="sd">            type: str</span>
@@ -192,7 +192,7 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="Cpt.__init__"><a class="viewcode-back" href="../../../tree/reference.html#pygef.Cpt.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">path</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">content</span><span class="p">:</span> <span class="nb">dict</span> <span class="o">|</span> <span class="kc">None</span> <span class="o">=</span> <span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Cpt class.</span>
 
 <span class="sd">        Parameters</span>
@@ -248,7 +248,7 @@
         <span class="n">colors</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
         <span class="n">z_NAP</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Plot the cpt file and return matplotlib.pyplot.figure .</span>
 
 <span class="sd">        Parameters</span>
