deploy: 9c7cab2c0739276a2ea80d09bb5be7c241210f52

--- a/_modules/pygef/gef/cpt.html
+++ b/_modules/pygef/gef/cpt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>pygef.gef.cpt &mdash; pygef 0.7.3 documentation</title>
+  <title>pygef.gef.cpt &mdash; pygef 0.8.0rc0 documentation</title>
       <link rel="stylesheet" href="../../../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../../../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../../../_static/plot_directive.css" type="text/css" />
