deploy: 8a1d3e7088aa985543ec49fea3d4625e0581f6af

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Overview: module code &mdash; pygef 0.8.0a3 documentation</title>
+  <title>Overview: module code &mdash; pygef 0.8.0a4 documentation</title>
       <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../_static/plot_directive.css" type="text/css" />
@@ -67,8 +67,10 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="pygef/gef/bore.html">pygef.gef.bore</a></li>
-<li><a href="pygef/gef/cpt.html">pygef.gef.cpt</a></li>
+<ul><li><a href="pygef/bore.html">pygef.bore</a></li>
+<li><a href="pygef/cpt.html">pygef.cpt</a></li>
+<li><a href="pygef/plotting.html">pygef.plotting</a></li>
+<li><a href="pygef/shim.html">pygef.shim</a></li>
 </ul>
 
            </div>
