--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; pygef 0.8.0a3 documentation</title>
+  <title>Index &mdash; pygef 0.8.0a4 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/plot_directive.css" type="text/css" />
@@ -71,18 +71,33 @@
 
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
+ | <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  
 </div>
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.Bore.__init__">__init__() (pygef.Bore method)</a>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.__init__">__init__() (pygef.bore.BoreData method)</a>
 
       <ul>
-        <li><a href="tree/reference.html#pygef.Cpt.__init__">(pygef.Cpt method)</a>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.__init__">(pygef.cpt.CPTData method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.attributes">attributes() (pygef.bore.BoreData method)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.attributes">(pygef.cpt.CPTData method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -91,7 +106,7 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.Bore">Bore (class in pygef)</a>
+      <li><a href="tree/reference.html#pygef.bore.BoreData">BoreData (class in pygef.bore)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -99,20 +114,44 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.Cpt">Cpt (class in pygef)</a>
+      <li><a href="tree/reference.html#pygef.cpt.CPTData">CPTData (class in pygef.cpt)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.bore.BoreData.display_attributes">display_attributes() (pygef.bore.BoreData method)</a>
+
+      <ul>
+        <li><a href="tree/reference.html#pygef.cpt.CPTData.display_attributes">(pygef.cpt.CPTData method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="tree/reference.html#pygef.Bore.plot">plot() (pygef.Bore method)</a>
-
-      <ul>
-        <li><a href="tree/reference.html#pygef.Cpt.plot">(pygef.Cpt method)</a>
+      <li><a href="tree/reference.html#pygef.plotting.plot_bore">plot_bore() (in module pygef.plotting)</a>
 </li>
-      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.plotting.plot_cpt">plot_cpt() (in module pygef.plotting)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.shim.read_bore">read_bore() (in module pygef.shim)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tree/reference.html#pygef.shim.read_cpt">read_cpt() (in module pygef.shim)</a>
+</li>
   </ul></td>
 </tr></table>
 
