deploy: 5887f87cc94f7408f48d384dd42d563b433363b6

--- a/tree/getting_started.html
+++ b/tree/getting_started.html
@@ -227,9 +227,9 @@ columns defined in the file.</p>
 <span class="gp">In [12]: </span><span class="n">plot_cpt</span><span class="p">(</span><span class="n">cpt</span><span class="p">)</span>
 <span class="gh">Out[12]: </span>
 <span class="go">(&lt;Figure size 800x1200 with 3 Axes&gt;,</span>
-<span class="go"> (&lt;AxesSubplot:xlabel=&#39;$q_c$ [MPa]&#39;, ylabel=&#39;Depth [m]&#39;&gt;,</span>
-<span class="go">  &lt;AxesSubplot:xlabel=&#39;fs [MPa]&#39;&gt;,</span>
-<span class="go">  &lt;AxesSubplot:xlabel=&#39;rf [%]&#39;&gt;))</span>
+<span class="go"> (&lt;Axes: xlabel=&#39;$q_c$ [MPa]&#39;, ylabel=&#39;Depth [m]&#39;&gt;,</span>
+<span class="go">  &lt;Axes: xlabel=&#39;fs [MPa]&#39;&gt;,</span>
+<span class="go">  &lt;Axes: xlabel=&#39;rf [%]&#39;&gt;))</span>
 </pre></div>
 </div>
 <img alt="../_images/cpt_plot.png" src="../_images/cpt_plot.png" />
@@ -242,7 +242,7 @@ columns defined in the file.</p>
 <span class="gp">In [14]: </span><span class="n">plot_bore</span><span class="p">(</span><span class="n">bore</span><span class="p">)</span>
 <span class="gh">Out[14]: </span>
 <span class="go">(&lt;Figure size 800x1200 with 1 Axes&gt;,</span>
-<span class="go"> &lt;AxesSubplot:xlabel=&#39;cumulative soil fraction&#39;, ylabel=&#39;depth [m]&#39;&gt;)</span>
+<span class="go"> &lt;Axes: xlabel=&#39;cumulative soil fraction&#39;, ylabel=&#39;depth [m]&#39;&gt;)</span>
 </pre></div>
 </div>
 <img alt="../_images/bore_plot.png" src="../_images/bore_plot.png" />
