--- a/_modules/pygef/cpt.html
+++ b/_modules/pygef/cpt.html
@@ -12,11 +12,10 @@
     <script src="../../_static/js/html5shiv.min.js"></script>
   <![endif]-->
   
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-        <script src="../../_static/jquery.js"></script>
-        <script src="../../_static/underscore.js"></script>
-        <script src="../../_static/_sphinx_javascript_frameworks_compat.js"></script>
         <script src="../../_static/doctools.js"></script>
+        <script src="../../_static/sphinx_highlight.js"></script>
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -27,11 +26,15 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="../../index.html" class="icon icon-home"> pygef
+
+          
+          
+          <a href="../../index.html" class="icon icon-home">
+            pygef
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="../../search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -56,9 +59,9 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="../../index.html" class="icon icon-home"></a> &raquo;</li>
-          <li><a href="../index.html">Module code</a> &raquo;</li>
-      <li>pygef.cpt</li>
+      <li><a href="../../index.html" class="icon icon-home" aria-label="Home"></a></li>
+          <li class="breadcrumb-item"><a href="../index.html">Module code</a></li>
+      <li class="breadcrumb-item active">pygef.cpt</li>
       <li class="wy-breadcrumbs-aside">
       </li>
   </ul>
@@ -87,6 +90,7 @@
     <span class="n">Class1</span> <span class="o">=</span> <span class="mi">1</span>
     <span class="n">Class2</span> <span class="o">=</span> <span class="mi">2</span>
     <span class="n">Class3</span> <span class="o">=</span> <span class="mi">3</span>
+    <span class="n">Class4</span> <span class="o">=</span> <span class="mi">4</span>
 
 
 <div class="viewcode-block" id="CPTData"><a class="viewcode-back" href="../../tree/reference.html#pygef.cpt.CPTData">[docs]</a><span class="nd">@dataclass</span>
